[tool.poetry]
name = "stcadmin"
version = "0.1.0"
description = ""
authors = ["Luke Shiner <luke@lukeshiner.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gunicorn = ">=20.1.0"
django = ">=4.0"
django-formtools = ">=2.3"
django-markup = ">=1.5.0"
django-jchart = ">=0.4.2"
django-admin-sortable2 = ">=1.0"
django-debug-toolbar = ">=3.2.4"
psycopg2 = ">=2.9.2"
pytz = ">=2021.1"
sphinx = ">=4.4.0"
sphinx_rtd_theme = ">=1.0.0"
tabler = ">=2.4.2"
toml = ">=0.10.2"
xlsxwriter = ">=3.0.1"
openpyxl = ">=3.0.7"
isoweek = ">=1.3.3"
labeler = {git = "https://github.com/lukeshiner/labeler.git"}
django-solo = ">=2.0.0"
celery = {extras = ["pytest"], version = ">=5.2.3"}
django-polymorphic = ">=3.1.0"
django-mathfilters = ">=1.0.0"
easy-thumbnails = ">=2.8"
file-exchange = {git = "https://github.com/lukeshiner/django-file_exchange.git", rev = "main"}
flake8-docstrings = ">=1.6.0"
django-storages = "^1.12.3"
boto3 = "^1.24.13"
shopify_api_py = {git = "https://github.com/stcstores/shopify_api_py.git", rev = "main"}
linnapi = {git = "https://github.com/stcstores/linnapi.git", rev = "main"}
django-select2 = "^7.10.0"
pymemcache = "^3.5.2"
django-redis = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.4"
pytest-django = ">=4.5.2"
pytest-cov = ">=3.0.0"
coveralls = ">=3.3.1"
black = ">=21.12b0"
flake8 = ">=4.0.1"
isort = ">=5.10.1"
factory_boy = ">=3.2.0"
pytest_factoryboy = ">=2.1.0"
pytest-celery = ">=0.0.0"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

[tool.black]
exclude = '''

(
  /(
    ...
    | .+/migrations
  )/
)
'''